--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 3</title>
+    <title>Form</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <main>
       <div class="container">
         <a class="back-link" href="./index.html">Go back</a>
-        <h1 class="main-title">Form</h1>
       </div>
+      <form class="feedback-form" autocomplete="off">
+        <label class="label-form">
+          Email
+          <input class="input-form" type="email" name="email" autofocus />
+        </label>
+        <label class="label-form">
+          Message
+          <textarea class="text" name="message" rows="8"></textarea>
+        </label>
+        <button class="button-form" type="submit">Submit</button>
+      </form>
     </main>
     <script type="module" src="./js/2-form.js"></script>
   </body>
